# network_second_modeling

./: .gitignore  README.md  pyproject.toml
discovery_analysis/: across_session_correlations.ipynb  correlations_networks.ipynb  creating_second_level.ipynb  taskbaseline_networkcorrs.ipynb  testing_second_level.ipynb
discovery_surface_analysis/: 23_hyperalignment_surface_run.py  23_hyperalignment_surface_run.sbatch  24_hyperalignment_surface_saving.py  24_hyperalignment_surface_saving.sbatch  26_rsa_analysis_surface.ipynb
discovery_volume_analysis_pipeline/: analyze_encounter_leaveout.ipynb  analyze_task_leaveout.ipynb  config.py  run_encounter_leaveout.py  run_encounter_leaveout.sbatch  run_task_leaveout.py  run_task_leaveout.sbatch
prelim_discovery_analysis/: 10_create_averaged_parcellation.ipynb  10_create_group_parcellation_400.ipynb  10_visualize_parcellation_400.ipynb  11_visualize_group_parcellation.ipynb  12_visualize_indiv_parcellation.ipynb  13_visualize_parcel_intercepts.ipynb  14_create_OHBM_figure.ipynb  14_create_OHBM_figure_individual.ipynb  15_cleaned_parcellate_individuals.ipynb  16_5_plot_parcellated_correlations.ipynb  16_5_plot_parcellated_slope_distributions.ipynb  16_cleaned_model_parcel_slopes.ipynb  17_cleaned_parcel_PCA.ipynb  17_plot_slopes_on_brain.ipynb  18_plot_parcellated_correlations.ipynb  19_cleaned_parcel_PCA.ipynb  1_generate_second_models.ipynb  20_hyperalignment_run.py  20_hyperalignment_run.sbatch  20_hyperalignment_run_nb.ipynb  21_hyperalignment_run.py  21_hyperalignment_saving.py  21_hyperalignment_saving.sbatch  (+19 more)
(+75 files in other folders)
