[project]
name = "network_second_level_modeling"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "nastasi", email = "nklevak@stanford.edu"},
]
dependencies = ["nilearn>=0.11.1", "nibabel>=5.3.2", "scipy>=1.13.1", "numpy>=2.0.2", "pandas>=2.2.3", "matplotlib>=3.9.4", "seaborn>=0.13.2", "plotly>=6.0.1", "scikit-learn>=1.6.1", "statsmodels>=0.14.4", "pybids>=0.19.0", "jupyterlab-widgets>=3.0.14", "ipywidgets>=8.1.6", "tensorflow>=2.19.0", "keras>=3.9.2", "networkx>=3.2.1", "bctpy>=0.6.1", "nipype>=1.10.0", "ipykernel>=6.29.5"]
requires-python = "==3.9.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
